fix: 增加数据加载调试信息

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,10 @@
 {
   "version": 2,
   "routes": [
+    {
+      "src": "/data/coaches.json",
+      "dest": "/data/coaches.json"
+    },
     { "handle": "filesystem" },
     { "src": "/(.*)", "dest": "/index.html" }
   ]
