fix: 添加安全头部和修复图片路径

--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,21 @@
 {
   "version": 2,
-  "routes": [
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/$1" }
+  ],
+  "headers": [
     {
-      "src": "/data/coaches.json",
-      "dest": "/data/coaches.json"
-    },
-    { "handle": "filesystem" },
-    { "src": "/(.*)", "dest": "/index.html" }
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Strict-Transport-Security",
+          "value": "max-age=31536000; includeSubDomains"
+        },
+        {
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
+        }
+      ]
+    }
   ]
 } 
